# autotools-practice

./: Makefile.am  README.md  configure.ac  hello.c  whine.c
src/: whine.h
